--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".activity.ChooseAddressActivity"/>
         <activity android:name=".activity.OderListActivity"/>
+        <activity android:name=".activity.AlipayActivity"/>
 
     </application>
 
